7-configmap/gitea-svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitea
  name: gitea-cluster
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: web
    name: web
  - port: 22
    targetPort: ssh
    name: ssh

  selector:
    app: gitea
